--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* remove input number type arrows from Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* remove input number type arrows from Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
